--- a/trunk/Habanero.Build/Habanero.Build.csproj
+++ b/trunk/Habanero.Build/Habanero.Build.csproj
@@ -48,6 +48,7 @@
     <WarningLevel>4</WarningLevel>
     <DebugType>full</DebugType>
     <ErrorReport>prompt</ErrorReport>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\Release\</OutputPath>
@@ -136,6 +137,10 @@
     <ProjectReference Include="..\Habanero.Util\Habanero.Util.csproj">
       <Project>{D3B50C81-590B-429F-9761-3B676D607DFF}</Project>
       <Name>Habanero.Util</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Habanero\Habanero.csproj">
+      <Project>{9B32C6E9-037A-4610-85CB-95C9A050CF7C}</Project>
+      <Name>Habanero</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
