--- a/trunk/Habanero.UI.Pro/Habanero.UI.Pro.csproj
+++ b/trunk/Habanero.UI.Pro/Habanero.UI.Pro.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>Habanero.UI.Pro</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>true</DelaySign>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
