Fixed project post build commands. Commented out test that is referencing Habanero.UI.Pro where it shouldn't.

--- a/trunk/Habanero.Db/Habanero.Db.csproj
+++ b/trunk/Habanero.Db/Habanero.Db.csproj
@@ -180,6 +180,6 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
+    <PostBuildEvent>"$(SolutionDir)PostBuild.cmd" "$(SolutionDir)"  "$(TargetDir)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
