--- a/trunk/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/trunk/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -141,7 +141,7 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>copy $(SolutionDir)\lib\MySql.Data.dll  $(TargetDir)
-$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
+    <PostBuildEvent>copy "$(SolutionDir)\lib\MySql.Data.dll"  "$(TargetDir)"
+"$(SolutionDir)PostBuild.cmd" "$(SolutionDir)"  "$(TargetDir)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
