--- a/trunk/Habanero.UI.Pro/Habanero.UI.Pro.csproj
+++ b/trunk/Habanero.UI.Pro/Habanero.UI.Pro.csproj
@@ -188,6 +188,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
+    <PostBuildEvent>"$(SolutionDir)PostBuild.cmd" "$(SolutionDir)"  "$(TargetDir)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
