--- a/trunk/Habanero.UI.Std/Habanero.UI.Std.csproj
+++ b/trunk/Habanero.UI.Std/Habanero.UI.Std.csproj
@@ -56,6 +56,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>$(SolutionDir)PostBuild.cmd $(SolutionDir)  $(TargetDir)</PostBuildEvent>
+    <PostBuildEvent>"$(SolutionDir)PostBuild.cmd" "$(SolutionDir)"  "$(TargetDir)"</PostBuildEvent>
   </PropertyGroup>
 </Project>
