--- a/trunk/Habanero.Test/Habanero.Test.csproj
+++ b/trunk/Habanero.Test/Habanero.Test.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample.cs" />
     <Compile Include="Shape.cs" />
+    <Compile Include="TestByteString.cs" />
     <Compile Include="TestDelayedMethodCall.cs" />
     <Compile Include="TestEmailSender.cs" />
     <Compile Include="TestGlobalRegistry.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="TestHabaneroStringBuilder.cs" />
     <Compile Include="TestImageThumbnailCreator.cs" />
     <Compile Include="TestJpgMetaData.cs" />
+    <Compile Include="TestLongText.cs" />
     <Compile Include="TestNullCrypter.cs" />
     <Compile Include="TestProgressIndicators.cs" />
     <Compile Include="TestResources.Designer.cs">
@@ -105,7 +107,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="TestResources\TestJpeg.jpg" />
+    <Content Include="TestResources\TestJpeg2.jpg" />
+    <Content Include="TestResources\TestJpeg3.jpg" />
     <Content Include="TestResources\TestPhoto.jpg" />
+    <Content Include="TestResources\TestText.txt" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="TestResources.resx">
