Added usage of generics for the collection returned from a multiple relationship, as well as from the BOLoader. Changed UIFormField to do late loading if it's control type. Added an interface for the generic BusinessObjectCollections called IBusinessObjectCollection. Changed Dtd to allow for a type of "Byte[]" to be passed through for the property type.

--- a/trunk/Habanero.Bo/Habanero.Bo.csproj
+++ b/trunk/Habanero.Bo/Habanero.Bo.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Comparer\StringComparer.cs" />
     <Compile Include="Comparer\TimeSpanComparer.cs" />
     <Compile Include="CriteriaManager\SQLCriteriaCreator.cs" />
+    <Compile Include="IBusinessObjectCollection.cs" />
     <Compile Include="IDataSetProvider.cs" />
     <Compile Include="Loaders\XmlUIFormGridLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
