Made some unnecessarily public methods internal. Updated Property Comparer

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -104,8 +104,10 @@
     <Compile Include="ClassDefinition\UIGrid.cs" />
     <Compile Include="ClassDefinition\UIGridColumn.cs" />
     <Compile Include="Comparer\DateTimeComparer.cs" />
+    <Compile Include="Comparer\DoubleComparer.cs" />
     <Compile Include="Comparer\GuidComparer.cs" />
     <Compile Include="Comparer\IntComparer.cs" />
+    <Compile Include="Comparer\PropertyComparer.cs" />
     <Compile Include="Comparer\SingleComparer.cs" />
     <Compile Include="Comparer\StringComparer.cs" />
     <Compile Include="Comparer\TimeSpanComparer.cs" />
