--- a/source/Habanero.Test.General/Habanero.Test.General.csproj
+++ b/source/Habanero.Test.General/Habanero.Test.General.csproj
@@ -78,11 +78,11 @@
   <ItemGroup>
     <Reference Include="nmock">
       <Name>nmock</Name>
-      <HintPath>..\lib\nmock.dll</HintPath>
+      <HintPath>..\..\lib\nmock.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.4.1.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
