Added a facility to encrypt your database password. New method on HabaneroAppConsole and HabaneroAppForm called SetPrivateKey allows you to set the key that decrypts the password supplied in the config.

--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -70,6 +70,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TestResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="TestRSAPasswordCrypter.cs" />
     <Compile Include="TestSerialisationUtilities.cs" />
     <Compile Include="TestSortedStringCollection.cs" />
     <Compile Include="TestStringUtilities.cs" />
