--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Exceptions\UnknownTypeNameException.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="RSAPasswordCrypter.cs" />
     <Compile Include="XMLWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
