Changed the projects to only run the post build command when the project changes. Added "insert" and "add" methods to the ISqlStatementCollection interface. Restructured the ITransaction interface. Added reflected properties to the exceptions in the rowchanged event of the BOCollectionEditableDataSetProvider. Changed the persistence code in BusinessObject to use Transaction code. Added code to check the relationships of an object for the prevent delete setting before deleting. Added code to cascade deletes for a BusinessObject. Added a method to the RelationshipDef class to retrieve the ClassDef of the related class. Added a BusinessObjectReferentialIntegrityException exception class. Changed the IRelationshipCol interface to support IEnumerable<Relationship> and have a Contains method. Changed the MultipleRelationship class to have a public constructor and virtual methods so that it can be inherited from and thus also Mocked. Added the ITransactionCommitter interface. Changed the Transaction class so that it supports the ITransactionCommitter interface. Changed the Transaction class so that it supports the ITransaction interface and can therefore be used inside another transaction. Fixed bug with background color in the control mappers and in the DateTimePickerMapper. Added more tests.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -18,7 +18,7 @@
     <DelaySign>false</DelaySign>
     <OutputType>Library</OutputType>
     <RootNamespace>Habanero.Base</RootNamespace>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
     <StartupObject>
     </StartupObject>
     <FileUpgradeFlags>
@@ -93,6 +93,7 @@
     <Compile Include="Exceptions\InvalidXmlDefinitionException.cs" />
     <Compile Include="HabaneroApp.cs" />
     <Compile Include="IApplicationVersionUpgrader.cs" />
+    <Compile Include="ITransactionCommitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
