--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -18,7 +18,7 @@
     <DelaySign>false</DelaySign>
     <OutputType>Library</OutputType>
     <RootNamespace>Habanero.Test.BO</RootNamespace>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
     <StartupObject>
     </StartupObject>
     <FileUpgradeFlags>
@@ -176,6 +176,7 @@
     <Compile Include="TestDatabaseLookupList.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestDeleteHelper.cs" />
     <Compile Include="TestExpression.cs" />
     <Compile Include="TestPropDef.cs">
       <SubType>Code</SubType>
