--- a/source/Habanero.Test.General/Habanero.Test.General.csproj
+++ b/source/Habanero.Test.General/Habanero.Test.General.csproj
@@ -18,7 +18,7 @@
     <DelaySign>false</DelaySign>
     <OutputType>Library</OutputType>
     <RootNamespace>Habanero.Test.General</RootNamespace>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
     <StartupObject>
     </StartupObject>
     <FileUpgradeFlags>
@@ -121,6 +121,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Address.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -166,6 +167,7 @@
     <Compile Include="TestDatabaseConnection.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestDeletion.cs" />
     <Compile Include="Tester.cs">
       <SubType>Code</SubType>
     </Compile>
