--- a/source/Habanero.Test.UI/Habanero.Test.UI.csproj
+++ b/source/Habanero.Test.UI/Habanero.Test.UI.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>Habanero.Test.UI</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
