Changed the Transaction class to build the sql statements in the order that they are added (as opposed to a random order due to sorting on the ID of the objects).  Refactored the tests for the Transaction class into Test.BO.TestTransaction from Tester.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -194,6 +194,7 @@
     <Compile Include="TestSingleRelationship.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestTransaction.cs" />
     <Compile Include="TestUnrefRelationshipDef.cs" />
   </ItemGroup>
   <ItemGroup>
