Added a facility to encrypt your database password. New method on HabaneroAppConsole and HabaneroAppForm called SetPrivateKey allows you to set the key that decrypts the password supplied in the config.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Exceptions\UnknownTypeNameException.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="RSAPasswordCrypter.cs" />
     <Compile Include="XMLWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
