Fixed problem with no table name in the load criteria for a relationship that refers to an inheriting class.

--- a/source/Habanero.Test.General/Habanero.Test.General.csproj
+++ b/source/Habanero.Test.General/Habanero.Test.General.csproj
@@ -208,6 +208,7 @@
     <Compile Include="TestOneToOneRelationship.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestShapeCircleRelationship.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
