Early work on AutoIncrementing keys - it works for MySql, and support still needs to be added for other databases.  This should be simple - just a matter of overriding the relevant method in the DatabaseConnection class for that database.  This gets called within the same transaction as the insert statement. Also, some error checking needs to take place to prevent multiple properties from being auto-incrementing.  Finally, in order to use an auto-incrementing primary key, isObjectID must be set to false on the primarykey definition in the xml.  Support for the auto-incrementing setting the property needs to be added to FireStarter

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Exceptions\InvalidXmlDefinitionException.cs" />
     <Compile Include="HabaneroApp.cs" />
     <Compile Include="IApplicationVersionUpgrader.cs" />
+    <Compile Include="ISupportsAutoIncrementingField.cs" />
     <Compile Include="ITransactionCommitter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
