--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -90,6 +90,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.2.0.781, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
@@ -116,6 +120,7 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestDatabaseConnection.cs" />
     <Compile Include="TestDbMigrator.cs" />
     <Compile Include="TestConnectionStringFactory.cs">
       <SubType>Code</SubType>
