--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample.cs" />
     <Compile Include="Shape.cs" />
+    <Compile Include="TestAutoInc.cs" />
     <Compile Include="TestByteString.cs" />
     <Compile Include="TestDelayedMethodCall.cs" />
     <Compile Include="TestEmailSender.cs" />
