Fixed the limit code so that it works for mysql as well as sqlserver.  Added tests for this sql generation.  Added support for auto-incrementing and SqlServer.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -192,6 +192,7 @@
     </Compile>
     <Compile Include="TestRelationshipDef.cs" />
     <Compile Include="TestRelProp.cs" />
+    <Compile Include="TestSelectStatementGenerator.cs" />
     <Compile Include="TestSingleRelationship.cs">
       <SubType>Code</SubType>
     </Compile>
