Added new DateRangeComboBox, see the local Wiki for a full breakdown.  Integrated this with the filter controls. Revised FilterControl DateTime filtering. Added DataViewDateFilterClause. Added < and > to filter clause operators. Improved DelimitPascalCase to keep digits of a number together.

--- a/source/Habanero.Test.UI.Pro/Habanero.Test.UI.Pro.csproj
+++ b/source/Habanero.Test.UI.Pro/Habanero.Test.UI.Pro.csproj
@@ -55,6 +55,7 @@
     <Compile Include="TestCollectionComboBoxMapper.cs" />
     <Compile Include="TestComboBoxCollectionControl.cs" />
     <Compile Include="TestControlMapper.cs" />
+    <Compile Include="TestDateRangeComboBox.cs" />
     <Compile Include="TestDateTimePickerController.cs" />
     <Compile Include="TestDateTimePickerMapper.cs" />
     <Compile Include="TestDateTimePickerNullableMapper.cs" />
