--- a/source/Habanero.UI.Pro/Habanero.UI.Pro.csproj
+++ b/source/Habanero.UI.Pro/Habanero.UI.Pro.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Forms\ComboBoxMapper.cs" />
     <Compile Include="Forms\ControlMapper.cs" />
     <Compile Include="Forms\ControlMapperCollection.cs" />
+    <Compile Include="Forms\DateRangeComboBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Forms\DateTimePickerController.cs" />
     <Compile Include="Forms\DateTimePickerMapper.cs" />
     <Compile Include="Forms\DateTimePickerNullableMapper.cs" />
